--- a/src/main/resources/templates/proyecto_create.html
+++ b/src/main/resources/templates/proyecto_create.html
@@ -114,7 +114,7 @@ and open the template in the editor.
 												class="form-control" >
 													<option value=""></option>
 													<option th:each="riesgo : ${dataMaster.riesgos}" 
-												th:value="${riesgo.id}" th:text="${riesgo.id}">  </option>
+												th:value="${riesgo.id}" th:text="${riesgo.descripcionCorta}">  </option>
 											</select>
 										</div>
 									</div>		
