--- a/src/main/resources/templates/activo_fisico_create.html
+++ b/src/main/resources/templates/activo_fisico_create.html
@@ -150,12 +150,24 @@ and open the template in the editor.
 								</div>
 									<!-- Select Multiple -->
 								<div class="form-group">
-									<label class="col-md-4 control-label" for="slctUbicacion">Riesgos/Amenzas</label>
+									<label class="col-md-4 control-label" for="slctUbicacion">Riesgos/Amenzas Generales</label>
 									<div class="col-md-4">
-										<select id="riesgos" th:field="*{activoFisico.riesgos}" multiple="multiple" class="form-control" onmouseup="updateRiesgoResidual()" >
+										<select id="riesgos"  multiple="multiple" class="form-control" onmouseup="updateRiesgoResidual()" >
 											<option th:each="riesgo : ${dataMaster.riesgos}" 
-											th:selected="${riesgos.contains(riesgo)}"
+											th:value="${riesgo.id}" th:text="${riesgo.amenazaStr}" th:if="${!riesgos.contains(riesgo)}" >  </option>
+
+										</select>
+									</div>
+								</div>
+
+								
+								<div class="form-group">
+									<label class="col-md-4 control-label" for="slctUbicacion">Riesgos/Amenzas del Activo</label>
+									<div class="col-md-4">
+										<select id="riesgosActivoFisico" th:field="*{activoFisico.riesgos}" multiple="multiple" class="form-control" onmouseup="updateRiesgoResidualActivoFisico()"" >
+											<option th:each="riesgo : *{activoFisico.riesgos}" 
 											th:value="${riesgo.id}" th:text="${riesgo.amenazaStr}">  </option>
+											
 
 										</select>
 									</div>
@@ -163,7 +175,7 @@ and open the template in the editor.
 								
 								<!-- Text input-->
 								<div class="form-group">
-									<label class="col-md-4 control-label" for="txtCargo">Riesgo Residual</label>  
+									<label class="col-md-4 control-label" for="txtCargo">Riesgo Residual del Activo</label>  
 									<div class="col-md-4">
 										<input id="riesgoResidual" th:field="*{activoFisico.riesgoResidual}" name="riesgoResidual" type="text" class="form-control input-md" disabled="disabled" >
 									</div>
@@ -193,10 +205,22 @@ and open the template in the editor.
 	</div>	<!-- fin contenedor de pagina-->
 	
 	<script>
+	window.addEventListener("onload", unselect());
 
+	function unselect(){
+		for (var option of document.getElementById('riesgosActivoFisico').options) {
+			option.selected=false;
+			
+	    }
+
+	}
 	//solo la ejecuto cuando el submit viene del boton guardar por eso pregunto por el parametro #procesar
 	function validation() {
 	$('#spinner').show();
+	for (var option of document.getElementById('riesgosActivoFisico').options) {
+		option.selected=true;
+    }
+
 	return true;
 	}
 	
@@ -207,34 +231,51 @@ and open the template in the editor.
 		
 	}
 	
-	window.onmousedown = function (e) {
-	    var el = e.target;
-	    if (el.tagName.toLowerCase() == 'option' && el.parentNode.hasAttribute('multiple')) {
-	        e.preventDefault();
-
-	        // toggle selection
-	        if (el.hasAttribute('selected')) el.removeAttribute('selected');
-	        else el.setAttribute('selected', '');
-
-	        // hack to correct buggy behavior
-	        var select = el.parentNode.cloneNode(true);
-	        el.parentNode.parentNode.replaceChild(select, el.parentNode);
-	    }
-	}
+	
 	
 	function updateRiesgoResidual() {
 	    var riesgo = 0;
 		  for (var option of document.getElementById('riesgos').options) {
 		    if (option.selected) {
-		      if(riesgo < parseInt(getRiesgoResidual(option.text))){
-		    	  riesgo = parseInt(getRiesgoResidual(option.text));
-		      }
+		    	 $('#riesgos option:selected').remove();
+		    	 $('#riesgosActivoFisico').append($('<option/>', { 
+		    	        value: option.value,
+		    	        text : option.text,
+		    	    }));
 		    }
 		  }
-		  $("#riesgoResidual").val(riesgo)
+		  
+		   for (var option of document.getElementById('riesgosActivoFisico').options) {
+				  if(riesgo < parseInt(getRiesgoResidual(option.text))){
+		    	  riesgo = parseInt(getRiesgoResidual(option.text));
+		      }
+		  }
+		   
+
+	    $("#riesgoResidual").val(riesgo)
+			     
 	}
 	
-
+	function updateRiesgoResidualActivoFisico() {
+	    var riesgo = 0;
+		  for (var option of document.getElementById('riesgosActivoFisico').options) {
+		    if (option.selected) {
+		    	 $('#riesgosActivoFisico option:selected').remove();
+		    	 $('#riesgos').append($('<option/>', { 
+		    	        value: option.value,
+		    	        text : option.text,
+		    	    }));
+		    }
+		  }
+		  for (var option of document.getElementById('riesgosActivoFisico').options) {
+				  if(riesgo < parseInt(getRiesgoResidual(option.text))){
+		    	  riesgo = parseInt(getRiesgoResidual(option.text));
+		      }
+		  }
+		  
+		  
+		  $("#riesgoResidual").val(riesgo)
+	}
 	
 	function getRiesgoResidual(descripcion){		
 		return descripcion.substring(descripcion.indexOf("Riesgo Residual:")+17, descripcion.length);
