--- a/src/main/resources/templates/requerimientos.html
+++ b/src/main/resources/templates/requerimientos.html
@@ -31,7 +31,12 @@ and open the template in the editor.
 						<div class="col-sm-3"><a class="btn btn-sm btn-success" th:href="@{/requerimientos/create}" >Nuevo</a></div>					
 					</div>	
 					<div class="panel-body row" ><!--dentro del panel body va mi contenido-->
+					<span th:if="${searchDTO.contents.empty}">
+							 No se encontraron resultados!!!!!
+						</span>
 
+				    	<span th:if="${!searchDTO.contents.empty}">
+				    	
 						<table class="table table-responsive table-striped table-hover table-bordered">
 							<thead class="bg-success">
 								<tr>
@@ -48,7 +53,7 @@ and open the template in the editor.
 								</tr>
 							</thead>
 							<tbody>
-								<tr th:each="requerimiento : ${requerimientos}">
+								<tr th:each="requerimiento : ${searchDTO.contents}">
 									<td th:text="${requerimiento.solicitante}"></td>
 									<td th:text="${requerimiento.area}"></td>
 									<td th:text="${requerimiento.categoria}"></td>
@@ -90,7 +95,7 @@ and open the template in the editor.
 								</tr>
 							</tbody>
 						</table>
-
+				</span>
 					</div>
 				</div>
 
