--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -61,15 +61,15 @@
             <li><a href="#" onClick="cargarContenido('/incidentes/');return false;">Incidentes</a></li> 
              -->
       
-            <li><a href="#" onClick="cargarContenido('/riesgos/');return false;">Riesgos</a></li>
-            <li><a href="#" onClick="cargarContenido('/auditoria/');return false;">Auditoria</a></li>
-            <li><a href="#" onClick="cargarContenido('/proyectos/');return false;">Proyectos</a></li>
-            <li><a href="#" onClick="cargarContenido('/eventos/');return false;">Eventos</a></li>
             <li><a href="#" onClick="cargarContenido('/activos_fisicos/');return false;">Activos</a></li> 
+            <li><a href="#" onClick="cargarContenido('/auditoria/');return false;">Auditoria</a></li>
+            <li><a href="#" onClick="cargarContenido('/eventos/');return false;">Incidentes</a></li>
+            <li><a href="#" onClick="cargarContenido('/proyectos/');return false;">Proyectos</a></li>
             <li><a href="#" onClick="cargarContenido('/requerimientos/');return false;">Requerimientos</a></li> 
             <li><a href="#" onClick="cargarContenido('/reportes/');return false;">Reportes</a></li>
+            <li><a href="#" onClick="cargarContenido('/riesgos/');return false;">Riesgos</a></li>
             <li><a href="#" onClick="cargarContenido('/usuarios/');return false;">Seguridad</a></li>
-            
+           
             
           </ul>
           <ul class="nav navbar-nav navbar-right">
